--- a/index.html
+++ b/index.html
@@ -1,76 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Survey Brain</title>
-  <style>
-    body { font-family: system-ui; margin: 20px; background: #f5f5f5; }
-    h1 { color: #003366; }
-    section { background: white; padding: 15px; border-radius: 8px; margin-bottom: 15px; }
-    button { padding: 10px 20px; font-size: 16px; background: #0044cc; color: white; border: none; border-radius: 6px; cursor: pointer; }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Survey Brain</title>
+<style>
+  :root{--blue:#0B57D0;--bg:#f6f7fb;--card:#fff;--line:#e5e7eb;--text:#0f172a}
+  body{margin:0;background:var(--bg);color:var(--text);font:16px/1.5 system-ui,-apple-system,Segoe UI,Roboto,Arial}
+  .wrap{max-width:820px;margin:0 auto;padding:20px}
+  h1{margin:.2rem 0 0;color:#0b2770}
+  .sub{color:#475569;margin:0 0 14px}
+  .card{background:var(--card);border:1px solid var(--line);border-radius:12px;padding:16px;margin:12px 0}
+  label{font-weight:600;display:block;margin:8px 0 4px}
+  input,select{width:100%;padding:10px;border:1px solid var(--line);border-radius:8px;background:#fff}
+  .grid{display:grid;grid-template-columns:1fr 1fr;gap:12px}
+  @media (max-width:740px){.grid{grid-template-columns:1fr}}
+  button{background:var(--blue);color:#fff;border:none;border-radius:10px;padding:12px 16px;font-weight:700;cursor:pointer}
+  .rec{border:1px solid var(--line);border-radius:10px;padding:12px;margin:10px 0;background:#fff}
+  .muted{color:#64748b}
+</style>
 </head>
 <body>
-  <h1>Survey Brain</h1>
-  <p>Evidence-based two-option recommender</p>
+  <div class="wrap">
+    <h1>Survey Brain</h1>
+    <p class="sub">Evidence-based two-option recommender</p>
 
-  <section>
-    <label>Flow rate (L/min)</label><br>
-    <input id="flow" type="number" value="12"><br><br>
+    <div class="card">
+      <div class="grid">
+        <div>
+          <label for="flow">Flow rate (L/min)</label>
+          <input id="flow" type="number" value="12" step="0.1" />
+        </div>
+        <div>
+          <label for="mains_pressure">Static mains pressure (bar)</label>
+          <input id="mains_pressure" type="number" value="3.5" step="0.1" />
+        </div>
 
-    <label>System type</label><br>
-    <select id="system">
-      <option value="regular">Regular (open vented)</option>
-      <option value="combi">Combi</option>
-      <option value="system">System (with cylinder)</option>
-    </select><br><br>
+        <div>
+          <label for="test_method">Full pressure test</label>
+          <select id="test_method">
+            <option value="single_tap">Single tap</option>
+            <option value="two_tap">Two taps simultaneously</option>
+            <option value="outside_tap">Outside tap</option>
+          </select>
+        </div>
+        <div>
+          <label for="drop_bar">Pressure drop under two-tap (bar)</label>
+          <input id="drop_bar" type="number" value="0" step="0.1" />
+        </div>
 
-    <label>Customer persona</label><br>
-    <select id="persona">
-      <option value="elderly_couple">Elderly couple</option>
-      <option value="young_family">Young family</option>
-      <option value="empty_nester">Empty nester</option>
-    </select><br><br>
+        <div>
+          <label for="system">Existing system</label>
+          <select id="system">
+            <option value="regular">Regular (open vented)</option>
+            <option value="system">System (with cylinder)</option>
+            <option value="combi">Combi</option>
+            <option value="back_boiler">Back boiler</option>
+            <option value="electric">Electric</option>
+            <option value="thermal_store">Thermal store</option>
+          </select>
+        </div>
+        <div>
+          <label for="hot_water">Current hot water type</label>
+          <select id="hot_water">
+            <option value="vented">Vented (tank)</option>
+            <option value="unvented">Unvented</option>
+            <option value="none">None</option>
+          </select>
+        </div>
 
-    <button onclick="run()">Get 2 recommendations</button>
-  </section>
+        <div>
+          <label for="bathrooms">Bathrooms</label>
+          <input id="bathrooms" type="number" value="1" />
+        </div>
+        <div>
+          <label for="disruption">Disruption tolerance</label>
+          <select id="disruption">
+            <option value="low">Low</option>
+            <option value="medium">Medium</option>
+            <option value="high">High</option>
+          </select>
+        </div>
 
-  <section id="results"></section>
+        <div>
+          <label for="cyl_space">Space for cylinder</label>
+          <select id="cyl_space">
+            <option value="none">None</option>
+            <option value="tight">Tight</option>
+            <option value="ample" selected>Ample</option>
+          </select>
+        </div>
+        <div>
+          <label for="electrics_16a">16 A circuit available (Mixergy)</label>
+          <select id="electrics_16a">
+            <option value="yes">Yes</option>
+            <option value="no" selected>No</option>
+            <option value="unknown">Unknown</option>
+          </select>
+        </div>
 
-  <script>
-    const CONFIG = {
-      PROXY_URL: '/.netlify/functions/recommend'
-    };
+        <div>
+          <label for="persona">Customer persona</label>
+          <select id="persona">
+            <option value="elderly_couple">Elderly couple</option>
+            <option value="young_pro">Young professional</option>
+            <option value="starting_family">Starting family</option>
+            <option value="growing_family">Growing family</option>
+            <option value="empty_nesters">Empty nesters</option>
+            <option value="planning_retirement">Planning retirement</option>
+          </select>
+        </div>
+      </div>
 
-    async function run() {
-      const flow = document.getElementById('flow').value;
-      const system = document.getElementById('system').value;
-      const persona = document.getElementById('persona').value;
-      const payload = { flow, system, persona };
+      <div style="margin-top:14px">
+        <button id="go">Get 2 recommendations</button>
+        <span id="status" class="muted" style="margin-left:10px"></span>
+      </div>
+    </div>
 
-      const results = document.getElementById('results');
-      results.innerHTML = 'Thinking...';
+    <div id="results" class="card"></div>
+  </div>
 
-      try {
-        const r = await fetch(CONFIG.PROXY_URL, {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(payload)
-        });
-        if (!r.ok) throw new Error(await r.text());
-        const data = await r.json();
+<script>
+const CONFIG = { PROXY_URL: '/.netlify/functions/recommend' };
 
-        results.innerHTML = `
-          <h2>Recommendations</h2>
-          ${data.recommendations.map(r => `
-            <p><b>${r.title}</b><br>${r.reason}</p>
-          `).join('')}
-        `;
-      } catch (e) {
-        results.innerHTML = `<b>Model call failed:</b> ${e.message}`;
-      }
-    }
-  </script>
+function readForm(){
+  const val = id => document.getElementById(id).value;
+  return {
+    flow_lpm: Number(val('flow')),
+    mains_pressure_bar: Number(val('mains_pressure')),
+    pressure_test_method: val('test_method'),
+    mains_drop_bar: Number(val('drop_bar') || 0),
+    existing_system: val('system'),
+    hot_water: val('hot_water'),
+    bathrooms: Number(val('bathrooms')),
+    disruption_tolerance: val('disruption'),
+    space_for_cylinder: val('cyl_space'),
+    electrics_16a: val('electrics_16a'),
+    persona: val('persona')
+  };
+}
+
+async function run(){
+  const status = document.getElementById('status');
+  const results = document.getElementById('results');
+  results.innerHTML = '';
+  status.textContent = 'Calling model…';
+
+  try{
+    const payload = readForm();
+    const r = await fetch(CONFIG.PROXY_URL, {
+      method:'POST',
+      headers:{'Content-Type':'application/json'},
+      body: JSON.stringify(payload)
+    });
+    if(!r.ok) throw new Error(await r.text());
+    const data = await r.json();
+
+    results.innerHTML = '<h2>Recommendations</h2>' +
+      (data.recommendations||[]).map(item => `
+        <div class="rec">
+          <div style="font-weight:700">${item.title}</div>
+          <div>${item.reason}</div>
+        </div>
+      `).join('') ||
+      '<div class="muted">No recommendations returned.</div>';
+    status.textContent = 'Done.';
+  }catch(e){
+    status.textContent = 'Model call failed';
+    results.innerHTML = `<div class="muted">${e.message}</div>`;
+  }
+}
+document.getElementById('go').addEventListener('click', run);
+</script>
 </body>
 </html>
