--- a/index.html
+++ b/index.html
@@ -12,18 +12,21 @@
   .sub{color:#475569;margin:0 0 14px}
   .card{background:var(--card);border:1px solid var(--line);border-radius:12px;padding:16px;margin:12px 0}
   label{font-weight:600;display:block;margin:8px 0 4px}
-  input,select{width:100%;padding:10px;border:1px solid var(--line);border-radius:8px;background:#fff}
+  input,select,textarea{width:100%;padding:10px;border:1px solid var(--line);border-radius:8px;background:#fff}
+  textarea{min-height:78px;resize:vertical}
   .grid{display:grid;grid-template-columns:1fr 1fr;gap:12px}
   @media (max-width:740px){.grid{grid-template-columns:1fr}}
   button{background:var(--blue);color:#fff;border:none;border-radius:10px;padding:12px 16px;font-weight:700;cursor:pointer}
   .rec{border:1px solid var(--line);border-radius:10px;padding:12px;margin:10px 0;background:#fff}
+  .bar{height:8px;border-radius:6px;background:#e5e7eb;overflow:hidden}
+  .bar > span{display:block;height:100%;background:var(--blue)}
   .muted{color:#64748b}
 </style>
 </head>
 <body>
 <div class="wrap">
   <h1>Survey Brain</h1>
-  <p class="sub">Evidence-based two-option recommender</p>
+  <p class="sub">Evidence-based recommendations</p>
 
   <div class="card">
     <div class="grid">
@@ -32,7 +35,7 @@
         <input id="flow" type="number" value="12" step="0.1" />
       </div>
       <div>
-        <label for="standing_pressure">Standing pressure (bar)</label>
+        <label for="standing_pressure">Static mains pressure (bar)</label>
         <input id="standing_pressure" type="number" value="3.5" step="0.1" />
       </div>
 
@@ -108,6 +111,7 @@
           <option value="no" selected>No</option>
           <option value="unknown">Unknown</option>
         </select>
+        <div class="muted" style="margin-top:4px">Required for Mixergy; adds cost (16 A RCD/MCB).</div>
       </div>
       <div>
         <label for="persona">Customer persona</label>
@@ -122,8 +126,11 @@
       </div>
     </div>
 
+    <label for="notes" style="margin-top:12px">Additional info (free text)</label>
+    <textarea id="notes" placeholder="e.g. guests most weekends; cylinder cupboard can be moved; prefers Hive."></textarea>
+
     <div style="margin-top:14px">
-      <button id="go">Get 2 recommendations</button>
+      <button id="go">Get recommendations (top 4)</button>
       <span id="status" class="muted" style="margin-left:10px"></span>
     </div>
   </div>
@@ -148,9 +155,12 @@ function readForm(){
     disruption_tolerance: v('disruption'),
     space_for_cylinder: v('cyl_space'),
     electrics_16a: v('electrics_16a'),
-    persona: v('persona')
+    persona: v('persona'),
+    additional_info: v('notes')
   };
 }
+
+function pct(n){ n = Math.max(0, Math.min(100, Number(n||0))); return Math.round(n); }
 
 async function run(){
   const status=document.getElementById('status');
@@ -166,14 +176,21 @@ async function run(){
     });
     if(!r.ok)throw new Error(await r.text());
     const data=await r.json();
-    results.innerHTML='<h2>Recommendations</h2>'+
-      (data.recommendations||[]).map(x=>`
-        <div class="rec">
-          <div style="font-weight:700">${x.title}</div>
-          <div>${x.reason}</div>
-        </div>
-      `).join('')||
-      '<div class="muted">No recommendations returned.</div>';
+
+    const items=(data.recommendations||[]).slice(0,4);
+    results.innerHTML='<h2>Recommendations</h2>' +
+      (items.length? items.map(x=>{
+        const m=pct(x.match);
+        return `
+          <div class="rec">
+            <div style="display:flex;justify-content:space-between;align-items:center">
+              <div style="font-weight:700">${x.title}</div>
+              <div class="muted">${m}% match</div>
+            </div>
+            <div class="bar" style="margin:8px 0 6px"><span style="width:${m}%"></span></div>
+            <div>${x.reason}</div>
+          </div>`;
+      }).join('') : '<div class="muted">No recommendations returned.</div>');
     status.textContent='Done.';
   }catch(e){
     status.textContent='Model call failed';
