--- a/index.html
+++ b/index.html
@@ -116,12 +116,11 @@
       <div>
         <label for="persona">Customer persona</label>
         <select id="persona">
-          <option value="elderly_couple">Elderly couple</option>
           <option value="young_pro">Young professional</option>
           <option value="starting_family">Starting family</option>
           <option value="growing_family">Growing family</option>
           <option value="empty_nesters">Empty nesters</option>
-          <option value="planning_retirement">Planning retirement</option>
+          <option value="post_retirement">Post retirement</option>
         </select>
       </div>
     </div>
