--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 </div>
 
 <script>
-const CONFIG = { PROXY_URL: '/.netlify/functions/recommend' };
+PROXY_URL: 'https://survey-brain-api.martinbibb.workers.dev/api/recommend'
 
 function readForm(){
   const v = id => document.getElementById(id).value;
