--- a/index.html
+++ b/index.html
@@ -1,203 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Survey Brain</title>
-<style>
-  :root{--blue:#0B57D0;--bg:#f6f7fb;--card:#fff;--line:#e5e7eb;--text:#0f172a}
-  body{margin:0;background:var(--bg);color:var(--text);font:16px/1.5 system-ui,-apple-system,Segoe UI,Roboto,Arial}
-  .wrap{max-width:820px;margin:0 auto;padding:20px}
-  h1{margin:.2rem 0 0;color:#0b2770}
-  .sub{color:#475569;margin:0 0 14px}
-  .card{background:var(--card);border:1px solid var(--line);border-radius:12px;padding:16px;margin:12px 0}
-  label{font-weight:600;display:block;margin:8px 0 4px}
-  input,select,textarea{width:100%;padding:10px;border:1px solid var(--line);border-radius:8px;background:#fff}
-  textarea{min-height:78px;resize:vertical}
-  .grid{display:grid;grid-template-columns:1fr 1fr;gap:12px}
-  @media (max-width:740px){.grid{grid-template-columns:1fr}}
-  button{background:var(--blue);color:#fff;border:none;border-radius:10px;padding:12px 16px;font-weight:700;cursor:pointer}
-  .rec{border:1px solid var(--line);border-radius:10px;padding:12px;margin:10px 0;background:#fff}
-  .bar{height:8px;border-radius:6px;background:#e5e7eb;overflow:hidden}
-  .bar > span{display:block;height:100%;background:var(--blue)}
-  .muted{color:#64748b}
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Survey Brain</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
+  <style>
+    body {
+      margin: 2rem;
+      max-width: 700px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    h1 {
+      color: #003366;
+      font-weight: 700;
+    }
+    #results .card {
+      margin-top: 1rem;
+      padding: 1rem;
+    }
+    .progress {
+      height: 6px;
+      background-color: #e0e0e0;
+      border-radius: 3px;
+      overflow: hidden;
+      margin-top: 0.5rem;
+    }
+    .progress-bar {
+      height: 100%;
+      background-color: #0070f3;
+      transition: width 0.3s ease-in-out;
+    }
+    label {
+      margin-top: 10px;
+      display: block;
+    }
+  </style>
 </head>
-<body>
-<div class="wrap">
-  <h1>Survey Brain</h1>
-  <p class="sub">Evidence-based recommendations</p>
 
-  <div class="card">
+<body>
+  <h1>Survey Brain</h1>
+  <p>Evidence-based recommendations</p>
+
+  <main>
     <div class="grid">
       <div>
         <label for="flow">Flow rate (L/min)</label>
-        <input id="flow" type="number" value="12" step="0.1" />
-      </div>
-      <div>
-        <label for="standing_pressure">Static mains pressure (bar)</label>
-        <input id="standing_pressure" type="number" value="3.5" step="0.1" />
-      </div>
+        <input id="flow" type="number" value="12">
 
-      <div>
+        <label for="standing_pressure">Static mains pressure (bar)</label>
+        <input id="standing_pressure" type="number" step="0.1" value="3.5">
+
         <label for="working_pressure">Working pressure (flow @ pressure)</label>
-        <input id="working_pressure" placeholder="e.g. 12 L/min @ 1.2 bar" />
-      </div>
-      <div>
+        <input id="working_pressure" placeholder="e.g. 12 L/min @ 1.2 bar">
+
         <label for="test_method">Full pressure test</label>
         <select id="test_method">
-          <option value="single_tap">Single tap</option>
-          <option value="two_tap">Two taps simultaneously</option>
-          <option value="outside_tap">Outside tap</option>
+          <option>Single tap</option>
+          <option>Outside tap</option>
+          <option>3 tap test</option>
         </select>
-      </div>
 
-      <div>
         <label for="system">Existing system</label>
         <select id="system">
-          <option value="regular">Regular (open vented)</option>
-          <option value="system">System (with cylinder)</option>
-          <option value="combi">Combi</option>
-          <option value="back_boiler">Back boiler</option>
-          <option value="electric">Electric</option>
-          <option value="thermal_store">Thermal store</option>
+          <option>Regular (open vented)</option>
+          <option>System (sealed)</option>
+          <option>Combi</option>
         </select>
-      </div>
-      <div>
+
         <label for="hot_water">Current hot water type</label>
         <select id="hot_water">
-          <option value="vented">Vented (tank)</option>
-          <option value="unvented">Unvented</option>
-          <option value="none">None</option>
+          <option>Vented (tank)</option>
+          <option>Unvented (cylinder)</option>
+          <option>Instant (combi)</option>
         </select>
-      </div>
 
-      <div>
         <label for="bathrooms">Bathrooms</label>
-        <input id="bathrooms" type="number" value="1" />
-      </div>
-      <div>
+        <input id="bathrooms" type="number" value="1">
+
         <label for="occupancy">Occupancy</label>
         <select id="occupancy">
-          <option value="single">Single occupant</option>
-          <option value="two_always" selected>Always 2 people</option>
-          <option value="two_to_three">Will soon be 3+</option>
-          <option value="two_plus_guests">Mostly 2 but family often stay</option>
-          <option value="family4plus">Family of 4+ full time</option>
+          <option>Single occupant</option>
+          <option>Always 2 people</option>
+          <option>Mostly 2 but family often stay</option>
+          <option>Family (3+ full time)</option>
         </select>
-      </div>
 
-      <div>
         <label for="disruption">Disruption tolerance</label>
         <select id="disruption">
-          <option value="low">Low</option>
-          <option value="medium">Medium</option>
-          <option value="high">High</option>
+          <option>Low</option>
+          <option>Medium</option>
+          <option>High</option>
         </select>
-      </div>
-      <div>
+
         <label for="cyl_space">Space for cylinder</label>
         <select id="cyl_space">
-          <option value="none">None</option>
-          <option value="tight">Tight</option>
-          <option value="ample" selected>Ample</option>
+          <option>Tight</option>
+          <option>Ample</option>
         </select>
-      </div>
 
-      <div>
         <label for="electrics_16a">16 A circuit available (Mixergy)</label>
         <select id="electrics_16a">
-          <option value="yes">Yes</option>
-          <option value="no" selected>No</option>
-          <option value="unknown">Unknown</option>
+          <option>No</option>
+          <option>Yes</option>
         </select>
-        <div class="muted" style="margin-top:4px">Required for Mixergy; adds cost (16 A RCD/MCB).</div>
-      </div>
-      <div>
+
         <label for="persona">Customer persona</label>
         <select id="persona">
-          <option value="young_pro">Young professional</option>
-          <option value="starting_family">Starting family</option>
-          <option value="growing_family">Growing family</option>
-          <option value="empty_nesters">Empty nesters</option>
-          <option value="post_retirement">Post retirement</option>
+          <option>Post-retirement</option>
+          <option>Young professional</option>
+          <option>Family household</option>
+          <option>Empty nesters</option>
         </select>
+
+        <label for="notes">Additional info (free text)</label>
+        <textarea id="notes" placeholder="Add any extra notes here..."></textarea>
+
+        <div style="margin-top:14px">
+          <button id="go" onclick="run()">Get recommendations (top 4)</button>
+          <span id="status" class="muted"></span>
+        </div>
       </div>
     </div>
 
-    <label for="notes" style="margin-top:12px">Additional info (free text)</label>
-    <textarea id="notes" placeholder="e.g. guests most weekends; cylinder cupboard can be moved; prefers Hive."></textarea>
+    <div id="results" class="card"></div>
+  </main>
 
-    <div style="margin-top:14px">
-      <button id="go">Get recommendations (top 4)</button>
-      <span id="status" class="muted" style="margin-left:10px"></span>
-    </div>
-  </div>
-
-  <div id="results" class="card"></div>
-</div>
-
-const CONFIG = {
-  PROXY_URL: 'https://survey-brain-api.martinbibb.workers.dev/api/recommend'
-};
-
-function readForm(){
-  const v = id => document.getElementById(id).value;
-  return {
-    flow_lpm: Number(v('flow')),
-    standing_pressure_bar: Number(v('standing_pressure')),
-    working_pressure_desc: v('working_pressure'),
-    pressure_test_method: v('test_method'),
-    existing_system: v('system'),
-    hot_water: v('hot_water'),
-    bathrooms: Number(v('bathrooms')),
-    occupancy: v('occupancy'),
-    disruption_tolerance: v('disruption'),
-    space_for_cylinder: v('cyl_space'),
-    electrics_16a: v('electrics_16a'),
-    persona: v('persona'),
-    additional_info: v('notes')
-  };
-}
-
-function pct(n){ n = Math.max(0, Math.min(100, Number(n||0))); return Math.round(n); }
-
-async function run(){
-  const status=document.getElementById('status');
-  const results=document.getElementById('results');
-  results.innerHTML='';
-  status.textContent='Calling model…';
-  try{
-    const payload=readForm();
-    const r=await fetch(CONFIG.PROXY_URL,{
-      method:'POST',
-      headers:{'Content-Type':'application/json'},
-      body:JSON.stringify(payload)
-    });
-    if(!r.ok)throw new Error(await r.text());
-    const data=await r.json();
-
-    const items=(data.recommendations||[]).slice(0,4);
-    results.innerHTML='<h2>Recommendations</h2>' +
-      (items.length? items.map(x=>{
-        const m=pct(x.match);
-        return `
-          <div class="rec">
-            <div style="display:flex;justify-content:space-between;align-items:center">
-              <div style="font-weight:700">${x.title}</div>
-              <div class="muted">${m}% match</div>
-            </div>
-            <div class="bar" style="margin:8px 0 6px"><span style="width:${m}%"></span></div>
-            <div>${x.reason}</div>
-          </div>`;
-      }).join('') : '<div class="muted">No recommendations returned.</div>');
-    status.textContent='Done.';
-  }catch(e){
-    status.textContent='Model call failed';
-    results.innerHTML='<div class="muted">'+e.message+'</div>';
-  }
-}
-document.getElementById('go').addEventListener('click',run);
-</script>
+  <script src="recommend.js"></script>
 </body>
 </html>
